ARM Templates/Yaml/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sessions-ms-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: backend
      ms: sessions
  template:
    metadata:
      labels:
        tier: backend
        ms: sessions
    spec:
      containers:
        - name: sesssions-microservice
          image: <ACRNAME>.azurecr.io/sessions:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/meta/healthy
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/meta/ready
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "96Mi"
              cpu: "0.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: votings-ms-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: backend
      ms: votings
  template:
    metadata:
      name: votings-ms
      labels:
        tier: backend
        ms: votings
    spec:
      imagePullSecrets:
        - name: acr-auth
      containers:
        - name: votings-microservice
          image: <ACRNAME>.azurecr.io/votings:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/meta/healthy
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/meta/ready
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 5
          resources:
            requests:
              memory: "96Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.2"
