ARM Templates/Yaml/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: sessions-ms-svc
spec:
  type: ClusterIP
  selector:
    tier: backend
    ms: sessions
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: votings-ms-svc
spec:
  type: ClusterIP
  selector:
    tier: backend
    ms: votings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: export-ms-svc
spec:
  type: ClusterIP
  selector:
    tier: backend
    ms: export
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sessions-spa-svc
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: <LBIP>
  selector:
    app: sessions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
