ARM Templates/Yaml/ingress-route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-host-ssl-passthru-routing
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: web.xyz.com #change with actual host name
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 443
  - host: api.xyz.com #change with actual host name
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 443
